force-app/main/default/objects/Internet_Service_Request__c/Internet_Service_Request__c.object-meta.xml
<CustomObject>
    <label>Internet Service Request</label>
    <nameField>
        <displayFormat>ISR-{00000}</displayFormat>
        <label>Internet Service Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internet Service Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>