force-app/main/default/objects/Internet_Service_Request__c/fields/Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Connection_Type__c</fullName>
    <label>Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>