force-app/main/default/objects/Internet_Service_Request__c/fields/Internet_Detail__c.field-meta.xml
<CustomField>
    <fullName>Internet_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internet Detail</label>
    <referenceTo>Internet_Detail__c</referenceTo>
    <relationshipLabel>Internet Service Requests</relationshipLabel>
    <relationshipName>Internet_Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>