force-app/main/default/objects/Internet_Service_Request__c/fields/Preferred_ISP__c.field-meta.xml
<CustomField>
    <fullName>Preferred_ISP__c</fullName>
    <label>Preferred ISP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>JioFiber</fullName>
            </value>
            <value>
                <fullName>Airtel Xstream</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>BSNL</fullName>
            </value>
            <value>
                <fullName>Hathway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>