force-app/main/default/objects/Internet_Service_Request__c/fields/Speed_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Speed_Requirement__c</fullName>
    <label>Speed Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;50 Mbps,</fullName>
            </value>
            <value>
                <fullName>50–100 Mbps</fullName>
            </value>
            <value>
                <fullName>100–200 Mbps</fullName>
            </value>
            <value>
                <fullName>200–500 Mbps</fullName>
            </value>
            <value>
                <fullName>500 Mbps – 1 Gbps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>