force-app/main/default/objects/Internet_Service_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Connection_Type__c</columns>
    <columns>Speed_Requirement__c</columns>
    <columns>Preferred_ISP__c</columns>
    <columns>Installation_Required__c</columns>
    <columns>Usage_Type__c</columns>
    <columns>Service_Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>